--- a/index.html
+++ b/index.html
@@ -1,20 +1,69 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> S</title>
+
+	<title> </title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+
+	<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+
+	<style>
+
+	.center {
+  
+    margin-left: auto; 
+    margin-right: auto;
+    margin-top: 20px;
+    width: 50%;
+    border: 5px solid black;
+    border-radius: 5px;
+    padding: 10px;
+
+}
+	.textbox {
+		margin: 0px; 
+		width: 333px; 
+		height: 77px;
+	}
+
+	.title{
+		margin: 0px; 
+		width: 333px; 
+
+	}
+
+	.logo {
+		text-align: center;
+	}
+
+
+
+	</style> 
 </head>
 
 <body>
-<h1> Save your code snippet!</h1>
+<div class = "center" > 
+
+<div class="logo"> <img src="images/snippet.png" alt= "save a snippet" > </img> </div>
 Title: <br>
-<input id = "title">  </input> <br>
+<input id = "title" class = "title">  </input> <br>
 Code:<br>
-<input id="code"></input> <br>
+<textarea id="code" class= "textbox"></textarea> <br>
+Comments<br>
+<textarea  id = "comments" class = "textbox"> </textarea > <br>
 Tag it:<br>
 <input id="tagIt"></input><br>
 <br>
 
-<button id = "submit"> Submit  </button> <br>
+<button id = "submit" class="btn btn-success"> Submit  </button> <br>
 
 <h2> Snippets</h2><br>
 
@@ -24,7 +73,6 @@ Tag it:<br>
 
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 
 <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
 <script type = "text/javascript" src ="firebasesetup.js"></script>
